[package]
name = "dtb-walker"
description = "A simple package for DTB depth-first walking."
version = "0.1.3"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/YdrMaster/dtb-walker.git"
license = "MIT"
readme = "README.md"
keywords = ["device-tree", "dtb"]
categories = ["no-std"]

[dependencies]
