[package]
name = "dtb-walker"
description = "A simple package for DTB depth-first walking."
version = "0.2.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/YdrMaster/dtb-walker.git"
documentation = "https://docs.rs/dtb-walker"
license = "MIT"
readme = "README.md"
keywords = ["device-tree", "dtb"]
categories = ["no-std"]
